同步适配Cloud-mail3.1.0
